--- a/SiliconWebAppProject/Silicon/wwwroot/css/site.css
+++ b/SiliconWebAppProject/Silicon/wwwroot/css/site.css
@@ -793,6 +793,30 @@ footer .container .copyright .footer-span {
   }
 }
 
+.contact {
+  background-color: var(--color-gray-100);
+}
+.contact .container .contact-top .left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 44px;
+  width: 44px;
+  background-color: var(--color-white);
+  color: var(--color-theme);
+  border-radius: 100px;
+  text-decoration: none;
+  transition: all 0.15s ease-in-out;
+}
+.contact .container .contact-top .left:hover {
+  background-color: var(--color-gray-800);
+  color: var(--color-gray-200);
+}
+.contact .container .contact-bot {
+  width: 100%;
+  height: 50%;
+}
+
 .showcase {
   position: relative;
   padding-bottom: 100px;
