--- a/SiliconWebAppProject/Silicon/Views/Contact/Index.cshtml
+++ b/SiliconWebAppProject/Silicon/Views/Contact/Index.cshtml
@@ -2,82 +2,84 @@
 
 <section class="contact">
     <div class="container">
-        <div class="contact-top">
-            <div class="home">
-                <p class="p-gray"><i class="fa-regular fa-home"></i>Home</p>
-                <p class="p-gray"><i class="fa-regular fa-angle-double-right"></i></p>
-                <p class="p-theme">Contact</p>
+        <div class="back">
+            <div class="contact-top">
+                <div class="home">
+                    <p class="p-gray"><i class="fa-regular fa-home"></i>Home</p>
+                    <p class="p-gray"><i class="fa-regular fa-angle-double-right"></i></p>
+                    <p class="p-theme">Contact</p>
+                </div>
+
+                <div class="contact-us">
+                    <h1>Contact Us</h1>
+                    <div class="email-careers">
+                        <div class="left">
+                            <a asp-action="Index" asp-controller="Contact"><i class="fa-regular fa-envelope"></i></a>
+                        </div>
+
+                        <div class="right">
+                            <h4>Email us</h4>
+                            <p>Please feel free to drop us a line. We will respond as soon as possible.</p>
+                            <a asp-action="Index" asp-controller="Contact">Leave a message <i class="fa-regular fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="email-careers">
+                        <div class="left">
+                            <a asp-action="Index" asp-controller="Contact"><img src="~/images/contact/Vector.svg" alt="Alternate Text" /></a>
+                        </div>
+
+                        <div class="right">
+                            <h4>Careers</h4>
+                            <p>Sit ac ipsum leo lorem magna nunc mattis maecenas non vestibulum.</p>
+                            <a asp-action="Index" asp-controller="Contact">Send an application <i class="fa-regular fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <div class="contact-us">
-                <h1>Contact Us</h1>
-                <div class="email-careers">
-                    <div class="left">
-                        <a asp-action="Index" asp-controller="Contact"><i class="fa-regular fa-envelope"></i></a>
-                    </div>
-
-                    <div class="right">
-                        <h4>Email us</h4>
-                        <p>Please feel free to drop us a line. We will respond as soon as possible.</p>
-                        <a asp-action="Index" asp-controller="Contact">Leave a message <i class="fa-regular fa-arrow-right"></i></a>
-                    </div>
-                </div>
-
-                <div class="email-careers">
-                    <div class="left">
-                        <a class="btn-socialmedia" asp-action="Index" asp-controller="Contact"><img src="./images/contact/Vector.svg" alt="Alternate Text" /></a>
-                    </div>
-
-                    <div class="right">
-                        <h4>Careers</h4>
-                        <p>Sit ac ipsum leo lorem magna nunc mattis maecenas non vestibulum.</p>
-                        <a asp-action="Index" asp-controller="Contact">Send an application <i class="fa-regular fa-arrow-right"></i></a>
-                    </div>
-                </div>
+            <div class="contact-bot">
+                <img class="bot-img" src="~/images/contact/Map.svg" />
             </div>
         </div>
-
+        
         <div class="form-contact">
+            <h4>Get In Contact With Us</h4>
             <form method="post" class="form-signin">
-                <div class="input-group">
+                <div class="input-group input-fullname">
                     <label class="input-label" asp-for="FullName"></label>
                     <input asp-for="FullName" />
                     <span asp-validation-for="FullName"></span>
                 </div>
 
-                <div class="input-group">
+                <div class="input-group input-email">
                     <label class="input-label" asp-for="Email"></label>
                     <input asp-for="Email" />
                     <span asp-validation-for="Email"></span>
                 </div>
 
-                <div class="select">
-                    <div class="selected">Service</div>
-                    <div class="select-options">
-                        <div class="option" data-value="work">Work with us</div>
-                        <div class="option" data-value="talk">Talk to us</div>
-                        <div class="option" data-value="report">Report an issue</div>
-                        <div class="option" data-value="study">Study with us</div>
-                    </div>
-                    <label class="" asp-for="Service"></label>
-                    <select name="service" id="service">
-                        <option value="work">Work with us</option>
-                        <option value="talk">Talk to us</option>
-                        <option value="report">Report an issue</option>
-                        <option value="study">Study with us</option>
+                <div class="input-group input-service">
+                    <label class="input-label" asp-for="Service"></label>
+                    <select class="select-options" name="service">
+                        <option class="option" value="work">Work with us</option>
+                        <option class="option" value="talk">Talk to us</option>
+                        <option class="option" value="report">Report an issue</option>
+                        <option class="option" value="study">Study with us</option>
                     </select>
                 </div>
 
-                <div class="input-group">
+                <div class="input-group input-message">
                     <label class="input-label" asp-for="Message"></label>
-                    <textarea asp-for="Message" />
+                    <textarea asp-for="Message"></textarea>
                     <span asp-validation-for="Message"></span>
+                </div>
+
+                <div class="submit">
+                    <button type="submit" class="btn btn-theme">Send Contact Request</button>
                 </div>
             </form>
         </div>
 
-        <div class="contact-bot">
-            <img src="./images/contact/Map.svg" alt="Map" />
-        </div>
+        
     </div>
 </section>
