--- a/SiliconWebAppProject/Silicon/wwwroot/css/scss/sections/partials/_contact.scss
+++ b/SiliconWebAppProject/Silicon/wwwroot/css/scss/sections/partials/_contact.scss
@@ -3,37 +3,144 @@
 
     .container {
 
-        .contact-top {
+        .back {
+            position: relative;
 
+            .contact-top {
+                width: 30%;
+                margin-left: 100px;
 
-            .left {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 44px;
-                width: 44px;
-                background-color: var(--color-white);
-                color: var(--color-theme);
-                border-radius: 100px;
-                text-decoration: none;
-                transition: all 0.15s ease-in-out;
+                .home {
+                    padding-top: 30px;
+                    display: flex;
+                    gap: 15px;
+                    text-align: center;
 
-                &:hover {
-                    background-color: var(--color-gray-800);
-                    color: var(--color-gray-200);
+                    .p-gray {
+                        color: var(--color-gray-600);
+
+                        .fa-home {
+                            padding-right: 5px;
+                        }
+                    }
+
+                    .p-theme {
+                        color: var(--color-theme);
+                    }
+                }
+
+                .contact-us {
+                    padding-bottom: 50px;
+
+                    .email-careers {
+                        display: flex;
+                        gap: 20px;
+                        padding-bottom: 30px;
+
+                        .left {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            height: 44px;
+                            width: 44px;
+                            background-color: var(--color-white);
+                            color: var(--color-theme);
+                            border-radius: 100px;
+                            text-decoration: none;
+                            transition: all 0.15s ease-in-out;
+
+                            img {
+                                width: 17px;
+                            }
+
+                            i {
+                                color: var(--color-theme);
+                            }
+                        }
+
+                        .right {
+                            width: 70%;
+
+                            h4 {
+                                @include no-mp;
+                            }
+
+                            p {
+                                @include no-mp;
+                                padding: 10px 0;
+                            }
+                        }
+                    }
                 }
             }
 
-            .right {
+            .contact-bot {
+                position: relative;
+                width: 100%;
+                left: -85px;
+
+                .bot-img {
+                    width: 113%;
+                }
             }
         }
 
-        .contact-form {
-        }
 
-        .contact-bot {
-            width: 100%;
-            height: 50%;
+
+        .form-contact {
+            position: absolute;
+            width: 400px;
+            height: 650px;
+            top: 10em;
+            right: 10em;
+            border-radius: 8px;
+            background-color: var(--color-white);
+            border-width: 0 6px 4px 0;
+            border-color: transparent var(--color-gray-400) var(--color-gray-400);
+            border-style: none solid solid none;
+            box-sizing: border-box;
+
+            h4 {
+                @include no-mp;
+                padding: 0 50px;
+                padding-top: 40px;
+                padding-bottom: 10px;
+            }
+
+            .form-signin {
+                width: 350px;
+                padding: 0 50px;
+                display: grid;
+                gap: 5px;
+                grid-template-columns: 1fr;
+                grid-template-areas:
+                    "fullname" "email" "service" "message" "submit";
+
+                .input-fullname {
+                    grid-area: fullname;
+                }
+
+                .input-email {
+                    grid-area: email;
+                }
+
+                .input-service {
+                    grid-area: service;
+                }
+
+                .input-message {
+                    grid-area: message;
+
+                    textarea {
+                        height: 150px;
+                    }
+                }
+
+                .submit {
+                    grid-area: submit;
+                    padding-top: 10px;
+                }
+            }
         }
     }
 }
